# voxura

./: .gitignore  README.md  index.ts  package.json  pmap.d.ts
.github/workflows/: codeql.yml
rust/: Cargo.toml  main.rs  mod.rs
rust/src/: auth.rs  cmd.rs  lib.rs  redirect.html  storage.rs
src/: downloader.ts  hooks.ts  java.ts  lib.rs  storage.ts  store.ts  types.ts  voxura.ts
src/auth/: account.ts  index.ts  util.ts
src/component/: game-component.ts  index.ts  java-agent.ts  java-component.ts  java-temurin.ts  minecraft-client-extension.ts  minecraft-extension.ts  minecraft-fabric.ts  minecraft-java-client.ts  minecraft-java-server.ts  minecraft-java.ts  minecraft-paper.ts  minecraft-quilt.ts  minecraft-quilt.tsx  minecraft-server-extension.ts  placeholder.ts  unknown-game.ts  versioned-component.ts
src/component/client/: minecraft-java.ts
src/component/server/: minecraft-java.ts
src/instance/: client.ts  index.ts  manager.ts  server.ts
src/instance/store/: default.ts  index.ts  mdpkm.ts
src/instances/: instance.ts  manager.ts
src/instances/component/: fabric-loader.ts  game-component.ts  index.ts  minecraft-extension.ts  minecraft-java.ts  placeholder.ts  quilt-loader.tsx  unknown-game.ts  versioned-component.ts
src/instances/loader/: fabric.ts  index.ts  minecraft-bedrock.ts  minecraft-java.ts  modded-java.ts  quilt.ts  unknown.ts
src/platform/: index.ts  mod.ts  modrinth.ts  project.ts
src/slices/: instances.ts
src/util/: constants.ts  eventemitter.ts  index.ts  joi.ts
src/util/mod/: fabric.ts  forge.ts  index.ts  quilt.ts  unknown.ts
(+6 files in other folders)
