[package]
name = "voxura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = "0.11.10"
futures = "0.3.25"
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
serde = { version = "1.0.149", features = ["derive"] }
tauri = { version = "1.2.2" }
tar = "0.4.38"
zip = "0.6.3"
md5 = "0.7.0"